--- a/AdminLTE-3.1.0/pages/examples/Charts.html
+++ b/AdminLTE-3.1.0/pages/examples/Charts.html
@@ -1196,7 +1196,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-sm-6">
-                <h1>SRT Dashboard</h1>
+                <h1>SRT Dashboard</h1>t5t5
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -1217,6 +1217,7 @@
               <div class="stat-card">
                 <div class="icon-circle bg-new-light">
                   <i class="fas fa-map-marked"></i>
+
                 </div>
                 <div class="text-secondary mb-3">Total Allocation</div>
                 <div class="card-number">2</div>
@@ -1226,7 +1227,7 @@
 
             <div class="col-12 col-md-6 col-lg-4 p-2">
               <div class="stat-card">
-                <div class="icon-circle bg-green-light">
+                <div class="icon-circle bg-green-light"> 
                   <i class="fas fa-shopping-cart"></i>
                 </div>
                 <div class="text-secondary mb-3">Material Supply Status</div>
@@ -1451,6 +1452,7 @@
             </div>
           </div>
         </div>
+
         <!-- table section  -->
         <div class="container-fluid pb-2">
           <div class="row">
