--- a/AdminLTE-3.1.0/pages/examples/newcharts.html
+++ b/AdminLTE-3.1.0/pages/examples/newcharts.html
@@ -1144,7 +1144,7 @@
               <div class="card chart-card shadow-sm">
                 <div class="chart-header">
                   <i class="fas fa-chart-pie"></i>
-                  Sales vs. Target Over Time
+                  Sales vs. Target Over Time  aaaaaaaaaaaaaaaaaaaaaaaa
                 </div>
 
                 <div class="card-body">
@@ -1448,6 +1448,8 @@
         ],
       });
 
+
+
       // **************************************************************************
       // **************************************************************************
       // <!-- Sale and target chart -->
@@ -1556,12 +1558,21 @@
         canvas.style.transition = "opacity 0.5s";
         canvas.style.opacity = "1";
       }, 100);
+
+
+
+
+      // *******************************************
+      // *******************************************
+
+
     </script>
 
     <!-- Bootstrap JS -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- jQuery -->
+
 
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
