--- a/AdminLTE-3.1.0/pages/examples/newcharts.html
+++ b/AdminLTE-3.1.0/pages/examples/newcharts.html
@@ -1144,7 +1144,7 @@
               <div class="card chart-card shadow-sm">
                 <div class="chart-header">
                   <i class="fas fa-chart-pie"></i>
-                  Sales vs. Target Over Time  aaaaaaaaaaaaaaaaaaaaaaaa
+                  Sales vs. Target Over Time
                 </div>
 
                 <div class="card-body">
@@ -1207,9 +1207,7 @@
                       </div>
                     </div>
 
-                    <div
-                      class="d-flex justify-content-center pt-3 border-top"
-                    >
+                    <div class="d-flex justify-content-center pt-3 border-top">
                       <div
                         class="d-flex align-items-center mx-3 small text-secondary"
                       >
@@ -1220,7 +1218,7 @@
                         <span>Actual Sales</span>
                       </div>
                       <div
-                        class="d-flex align-items-center  small text-secondary"
+                        class="d-flex align-items-center small text-secondary"
                       >
                         <div
                           class="legend-color rounded"
@@ -1236,6 +1234,49 @@
           </div>
         </div>
         <!-- new Charts section start  -->
+
+        <!-- line charts  -->
+        <div class="row p-2">
+          <div class="col-md-6">
+            <!-- Line chart -->
+            <div class="card card-primary card-outline">
+              <div class="card-header">
+                <h3 class="card-title">
+                  <i class="far fa-chart-bar"></i>
+                  Line Chart
+                </h3>
+
+                <div class="card-tools">
+                  <button
+                    type="button"
+                    class="btn btn-tool"
+                    data-card-widget="collapse"
+                  >
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-tool"
+                    data-card-widget="remove"
+                  >
+                    <i class="fas fa-times"></i>
+                  </button>
+                </div>
+              </div>
+              <div class="card-body">
+                <div id="line-chart" style="height: 300px"></div>
+              </div>
+              <!-- /.card-body-->
+            </div>
+            <!-- /.card -->
+
+            <!-- /.card -->
+          </div>
+          <!-- /.col -->
+
+          <div class="col-md-6"></div>
+          <!-- /.col -->
+        </div>
 
         <!-- /.content -->
       </div>
@@ -1448,8 +1489,6 @@
         ],
       });
 
-
-
       // **************************************************************************
       // **************************************************************************
       // <!-- Sale and target chart -->
@@ -1559,20 +1598,84 @@
         canvas.style.opacity = "1";
       }, 100);
 
-
-
-
       // *******************************************
       // *******************************************
 
+      // LINE chart js
+      //LINE randomly generated data
 
+      var sin = [],
+        cos = [];
+      for (var i = 0; i < 14; i += 0.5) {
+        sin.push([i, Math.sin(i)]);
+        cos.push([i, Math.cos(i)]);
+      }
+      var line_data1 = {
+        data: sin,
+        color: "#3c8dbc",
+      };
+      var line_data2 = {
+        data: cos,
+        color: "#00c0ef",
+      };
+      $.plot("#line-chart", [line_data1, line_data2], {
+        grid: {
+          hoverable: true,
+          borderColor: "#f3f3f3",
+          borderWidth: 1,
+          tickColor: "#f3f3f3",
+        },
+        series: {
+          shadowSize: 0,
+          lines: {
+            show: true,
+          },
+          points: {
+            show: true,
+          },
+        },
+        lines: {
+          fill: false,
+          color: ["#3c8dbc", "#f56954"],
+        },
+        yaxis: {
+          show: true,
+        },
+        xaxis: {
+          show: true,
+        },
+      });
+      //Initialize tooltip on hover
+      $('<div class="tooltip-inner" id="line-chart-tooltip"></div>')
+        .css({
+          position: "absolute",
+          display: "none",
+          opacity: 0.8,
+        })
+        .appendTo("body");
+      $("#line-chart").bind("plothover", function (event, pos, item) {
+        if (item) {
+          var x = item.datapoint[0].toFixed(2),
+            y = item.datapoint[1].toFixed(2);
+
+          $("#line-chart-tooltip")
+            .html(item.series.label + " of " + x + " = " + y)
+            .css({
+              top: item.pageY + 5,
+              left: item.pageX + 5,
+            })
+            .fadeIn(200);
+        } else {
+          $("#line-chart-tooltip").hide();
+        }
+      });
+      /* END LINE CHART */
     </script>
 
     <!-- Bootstrap JS -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- jQuery -->
-
 
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
