--- a/AdminLTE-3.1.0/pages/examples/Srtdashboard.html
+++ b/AdminLTE-3.1.0/pages/examples/Srtdashboard.html
@@ -1171,7 +1171,6 @@
         </section>
 
         <!-- cards section start  -->
-
         <div class="container-fluid">
           <div class="row g-0">
             <div class="col-12 col-md-6 col-lg-4 p-2">
@@ -1400,7 +1399,7 @@
             <div class="col-12">
               <div class="card chart-card shadow-sm">
                 <div class="chart-header">
-                  <i class="fas fa-chart-line mx-2"></i>
+                  <i class="fas fa-chart-line"></i>
                   Installation Trend Analysis
                 </div>
                 <div class="card-body">
@@ -1417,13 +1416,11 @@
         <div class="container-fluid pb-2">
           <div class="row">
             <div class="col-12">
-              <div class="card shadow-sm rounded-4 border-0">
+              <div class="card shadow-sm chart-card border-0">
                 <div class="card-header table-title border-0 p-0">
-                  <div class="p-3 border-bottom border-white border-opacity-10">
-                    <i class="fas fa-table me-2"></i>
-                    <span class="fs-5 fw-semibold"
-                      >Installation Status Details</span
-                    >
+                  <div class="p-3 border-bottom border-white border-opacity-10 chart-header">
+                    <i class="fas fa-table"></i>
+                    Installation Status Details
                   </div>
                   <ul class="nav nav-tabs border-0 px-3">
                     <li class="nav-item">
@@ -1925,7 +1922,6 @@
         ],
       });
 
-      
       // table tabs script **************************************************
 
       function switchTab(tabName, button) {
