--- a/AdminLTE-3.1.0/pages/examples/Srtdashboard.html
+++ b/AdminLTE-3.1.0/pages/examples/Srtdashboard.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>MY Dashboard aaaaaaaaaaaaa</title>
+<title>MY Dashboard new dashboard </title>
     <!-- Google Font: Source Sans Pro -->
     <link
       rel="stylesheet"
