added main dashboard final

--- a/AdminLTE-3.1.0/pages/examples/srt.html
+++ b/AdminLTE-3.1.0/pages/examples/srt.html
@@ -954,6 +954,14 @@
                     </a>
                   </li>
 
+
+                   <li class="nav-item">
+                    <a href="../examples/MainDashboard.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Main Dashboard</p>
+                    </a>
+                  </li>
+
                   <li class="nav-item">
                     <a href="../../starter.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
