--- a/AdminLTE-3.1.0/pages/examples/MainDashboard.html
+++ b/AdminLTE-3.1.0/pages/examples/MainDashboard.html
@@ -3,27 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>AdminLTE 3 | Blank Page</title>
 
-<title>MY Dashboard</title>
     <!-- Google Font: Source Sans Pro -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
     />
     <!-- Font Awesome -->
-
     <link
       rel="stylesheet"
       href="../../plugins/fontawesome-free/css/all.min.css"
     />
     <!-- Theme style -->
     <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-    />
   </head>
+
   <style>
     /* cards css  */
     .stat-card {
@@ -218,7 +213,7 @@
         <!-- Left navbar links -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" data-widget="" href="#" role="button"
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"
               ><i class="fas fa-bars"></i
             ></a>
           </li>
@@ -408,46 +403,16 @@
         <!-- Brand Logo -->
         <a href="../../index3.html" class="brand-link">
           <img
-            src="../../dist/img/AdminLTELogo.png"
-            alt="AdminLTE Logo"
-            class="brand-image img-circle elevation-3"
+            src="../images/KLK SVG Logo.svg"
+            alt="klk Logo"
+            class="brand-image elevation-3"
             style="opacity: 0.8"
           />
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <span class="brand-text font-weight-light">KLK Ventures</span>
         </a>
 
         <!-- Sidebar -->
         <div class="sidebar">
-          <!-- Sidebar user (optional) -->
-          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-              <img
-                src="../../dist/img/user2-160x160.jpg"
-                class="img-circle elevation-2"
-                alt="User Image"
-              />
-            </div>
-            <div class="info">
-              <a href="#" class="d-block">Alexander Pierce</a>
-            </div>
-          </div>
-
-          <!-- SidebarSearch Form -->
-          <div class="form-inline">
-            <div class="input-group" data-widget="sidebar-search">
-              <input
-                class="form-control form-control-sidebar"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <div class="input-group-append">
-                <button class="btn btn-sidebar">
-                  <i class="fas fa-search fa-fw"></i>
-                </button>
-              </div>
-            </div>
-          </div>
 
           <!-- Sidebar Menu -->
           <nav class="mt-2">
@@ -1008,15 +973,17 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link active">
+                    <a href="../examples/Srtdashboard.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>SRT Dashboard</p>
                     </a>
                   </li>
 
-
-                   <li class="nav-item">
-                    <a href="../examples/MainDashboard.html" class="nav-link">
+                  <li class="nav-item">
+                    <a
+                      href="../examples/MainDashboard.html"
+                      class="nav-link active"
+                    >
                       <i class="far fa-circle nav-icon"></i>
                       <p>Main Dashboard</p>
                     </a>
@@ -1960,13 +1927,18 @@
         // Add active class to clicked button
         button.classList.add("active");
       }
-
-   </script>
-
+    </script>
     <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- jQuery -->
 
+    <script src="../../plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="../../dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="../../dist/js/demo.js"></script>
   </body>
 </html>
