side bar changes

--- a/AdminLTE-3.1.0/pages/examples/MainDashboard.html
+++ b/AdminLTE-3.1.0/pages/examples/MainDashboard.html
@@ -112,7 +112,7 @@
     }
 
     /* cards css end  */
-    /* Minimal chart CSS - Bootstrap handles most styling */
+
     .chart-card {
       overflow: hidden;
       border-radius: 12px;
@@ -154,7 +154,7 @@
     .table-chart-card {
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-      overflow: hidden; /* important if you have background or inner elements */
+      overflow: hidden;
     }
 
     .tab-button {
@@ -267,8 +267,8 @@
       border-radius: 10px !important;
       margin: 0 5px !important;
       background: transparent !important;
-      color: #3b4350 !important; /* new color */
-      font-family: "Outfit", sans-serif !important; /* Outfit font */
+      color: #3b4350 !important;
+      font-family: "Outfit", sans-serif !important;
       font-weight: 500 !important;
       font-size: 14px !important;
       line-height: 20px !important;
@@ -555,7 +555,6 @@
             class="w-25 elevation-3"
             style="opacity: 0.8"
           />
-          <span class="brand-text font-weight-light">KLK Ventures</span>
         </a>
 
         <!-- Sidebar -->
@@ -570,7 +569,7 @@
             >
               <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-                <li class="nav-header">Menu</li>
+              <li class="nav-header">Menu</li>
               <li class="nav-item">
                 <a href="#" class="nav-link">
                   <i class="nav-icon far fa-chart-bar"></i>
