Desing a new dashboard according to new reference

--- a/AdminLTE-3.1.0/pages/examples/MainDashboard.html
+++ b/AdminLTE-3.1.0/pages/examples/MainDashboard.html
@@ -208,6 +208,10 @@
     .tab-pane.show.active {
       display: block;
     }
+
+
+    /* profile popup css  */
+    
   </style>
 
   <style>
@@ -373,6 +377,7 @@
             <a href="#" class="nav-link">Contact</a>
           </li>
         </ul>
+
 
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
